# ChangeLog for sci-biology/fsl
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Apr 2015;  <chymera@gentoo.org> fsl-5.0.6.ebuild:
  added new gentoo fsl-5.0.6 source location

  30 Mar 2015;  <chymera@gentoo.org> +files/fsl-5.0.8-fsldir_redux.patch,
  -files/fsl-5.0.8-redux.patch, fsl-5.0.8.ebuild:
  implemented 5.0.8 fsldir redux patch

  30 Mar 2015;  <chymera@gentoo.org> +files/fsl-5.0.8-redux.patch:
  5.0.8 redux patch by François Bissey

  29 Mar 2015;  <chymera@gentoo.org> fsl-5.0.8.ebuild:
  using the 5.0.8 headers patch

  29 Mar 2015;  <chymera@gentoo.org> +files/fsl-5.0.8-headers.patch,
  files/fsl-5.0.4-headers.patch:
  reimplmented pathc fsl-5.0.4-headers

  28 Mar 2015;  <chymera@gentoo.org> fsl-5.0.8.ebuild:
  ported changes from 5.0.6 regarding FSLDIR

  28 Mar 2015;  <chymera@gentoo.org> files/fsl-5.0.4-headers.patch:
  hunk implemented by upstream

  28 Mar 2015;  <h.chr@mail.ru> fsl-5.0.8.ebuild:
  using new setup patch file for new ebuild

  28 Mar 2015;  <h.chr@mail.ru> +files/fsl-5.0.8-setup.patch:
  new pathc by François Bissey

  25 Mar 2015;  <h.chr@mail.ru> fsl-5.0.4.ebuild, fsl-5.0.5.ebuild,
  fsl-5.0.8.ebuild:
  added licences to all versions

  25 Mar 2015;  <h.chr@mail.ru> fsl-5.0.6.ebuild:
  added license for included gdchart

  25 Mar 2015;  <h.chr@mail.ru> fsl-5.0.6.ebuild:
  set the correct licences

  11 Mar 2015;  <h.chr@mail.ru> fsl-5.0.6.ebuild:
  installing fslversion

  11 Mar 2015;  <h.chr@mail.ru> fsl-5.0.6.ebuild:
  sed-ing before installing

  10 Mar 2015;  <h.chr@mail.ru> fsl-5.0.6.ebuild:
  changed grep wrapper

  10 Mar 2015;  <h.chr@mail.ru> fsl-5.0.6.ebuild:
  reformatted tcl sed calls

  10 Mar 2015;  <h.chr@mail.ru> fsl-5.0.6.ebuild:
  fixed tcl location according to instructions by kiwifb

  10 Mar 2015;  <h.chr@mail.ru> fsl-5.0.6.ebuild:
  installing fsl.sh

  05 Mar 2015;  <h.chr@mail.ru> fsl-5.0.6.ebuild:
  removing faulty check
