@@ -1,4 +1,2 @@
-DIST fsl-5.0.4-sources.tar.gz 1311174642 SHA256 edf4888c49e023c54ada4c5a03377e83034913fca7d03dc9ef4b2f6b56bc85af SHA512 892d8eff63596af603b4f28d224a716cd0798830270ee505c750c1161b032fb0ca1e34442bf6cba39fb6e798d399ca4f662f64685ba5f2307dfc99e83d535e6b WHIRLPOOL bf42f82f8ab27ea971e76e03f031b036ee35199ae4a94307712806461e4e42e75eb17bb01da129065659072b191298ecc05e40d0b0709a48b4c24bffd53468d8
-DIST fsl-5.0.5-sources.tar.gz 1415442475 SHA256 fcd194f0599d65333eae47f7103dd418422dea30f71689bf2543555bbe117ebf SHA512 f34d65ffa236d248a7c71e108f030ca1aeed93864d7ae50acb66e9b4b813c8a47bbc0fb2a2efc798ed55e95e2e82c39118a289c200b994fbd3c1fbf38b17b1a3 WHIRLPOOL 2a4c4eeeb9c2ad7b60ed57b2c491dacb080f2083aa79a49df7682c4339abad78caf48c1d7f7be08d97b15507948d1370d3f4c92aaa97230e5554786adb40c5d5
 DIST fsl-5.0.6-sources.tar.gz 1415430870 SHA256 af953c07dbea30190419ce1812666b60dab06ef6cd3f3641fb53aaec8604f233 SHA512 bca7d69ba0538610387b29677ad4f38c30f8e4dc58efd92ae9efe5e7498619e862f5f5a67a00dc45cd94582086dc5ed16309bdafd06b025fc689f2d7f45ff108 WHIRLPOOL b6e95c40004c5590b6c08eda702b821ab20ebdb33d95369b2edd307c34a0a30905ae47969566586458c8a2407c7e2d52a5eecb108e2a8eeb595a29d684aec0c4
 DIST fsl-5.0.8-sources.tar.gz 1420879532 SHA256 2053cc42782360b191bd9610dbbc0a56677b40796cceb4680420b93d5eddfc15 SHA512 8dedf13d633d71fa28c5dd6591fab4adda4893b76467affa6f58aee917ee3fdc83da07d8f505feb61ac2733de1bfb84f7f9ff74589756946be21cdb9f057f0f0 WHIRLPOOL 2a64245f6b4da2642237aad96270b65799f868bb7a5294f1576470173a9393296b4c26e0ddfffe2198665d068c82f6d7b64548729cfa3aff07f6809c13d57554
