@@ -2,6 +2,9 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Apr 2015;  <chymera@gentoo.org> -fsl-5.0.4.ebuild, -fsl-5.0.5.ebuild:
+  removed ebuilds with unavailable sources
+
   07 Apr 2015;  <chymera@gentoo.org> fsl-5.0.6.ebuild:
   added new gentoo fsl-5.0.6 source location
 
